tests/reference/asr_preprocess-unterminated_comment_01-a351b61.stderr
C preprocessor error: Unterminated comment
 --> tests/errors/unterminated_comment_01.f90:3:8
  |
3 | #endif /* unterminated comment starts here
  |        ^ 
